--- a/public/style.css
+++ b/public/style.css
@@ -598,110 +598,6 @@ video {
   top: 6rem;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.left-\[-50px\] {
-  left: -50px;
-}
-
-.left-\[50px\] {
-  left: 50px;
-}
-
-.left-\[80px\] {
-  left: 80px;
-}
-
-.left-\[60px\] {
-  left: 60px;
-}
-
-.left-\[90px\] {
-  left: 90px;
-}
-
-.left-\[120px\] {
-  left: 120px;
-}
-
-.left-\[300px\] {
-  left: 300px;
-}
-
-.left-\[250px\] {
-  left: 250px;
-}
-
-.left-\[2400px\] {
-  left: 2400px;
-}
-
-.left-\[240px\] {
-  left: 240px;
-}
-
-.left-\[200px\] {
-  left: 200px;
-}
-
-.left-\[150px\] {
-  left: 150px;
-}
-
-.left-\[190px\] {
-  left: 190px;
-}
-
-.left-\[160px\] {
-  left: 160px;
-}
-
-.left-\[170px\] {
-  left: 170px;
-}
-
-.left-\[165px\] {
-  left: 165px;
-}
-
-.left-\[155px\] {
-  left: 155px;
-}
-
-.top-\[20px\] {
-  top: 20px;
-}
-
-.top-\[15px\] {
-  top: 15px;
-}
-
-.top-\[16px\] {
-  top: 16px;
-}
-
-.top-\[18px\] {
-  top: 18px;
-}
-
-.top-\[19px\] {
-  top: 19px;
-}
-
-.top-\[17px\] {
-  top: 17px;
-}
-
 .m-\[auto\] {
   margin: auto;
 }
@@ -713,6 +609,18 @@ video {
 
 .mb-6 {
   margin-bottom: 1.5rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
+.mt-56 {
+  margin-top: 14rem;
 }
 
 .block {
@@ -739,12 +647,12 @@ video {
   height: 354px;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .h-\[56px\] {
   height: 56px;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .w-20 {
@@ -767,8 +675,8 @@ video {
   width: 100%;
 }
 
-.w-\[218px\] {
-  width: 218px;
+.w-\[510px\] {
+  width: 510px;
 }
 
 .max-w-3xl {
@@ -779,8 +687,20 @@ video {
   max-width: 16rem;
 }
 
+.max-w-\[380px\] {
+  max-width: 380px;
+}
+
+.max-w-\[434px\] {
+  max-width: 434px;
+}
+
 .max-w-\[464px\] {
   max-width: 464px;
+}
+
+.max-w-\[510px\] {
+  max-width: 510px;
 }
 
 .max-w-\[520px\] {
@@ -791,20 +711,54 @@ video {
   max-width: 620px;
 }
 
-.max-w-\[434px\] {
-  max-width: 434px;
+.max-w-sm {
+  max-width: 24rem;
 }
 
-.max-w-\[510px\] {
-  max-width: 510px;
+.max-w-lg {
+  max-width: 32rem;
+}
+
+.max-w-7xl {
+  max-width: 80rem;
+}
+
+.max-w-\[360px\] {
+  max-width: 360px;
+}
+
+.max-w-\[990px\] {
+  max-width: 990px;
+}
+
+.max-w-\[366px\] {
+  max-width: 366px;
+}
+
+.max-w-\[400px\] {
+  max-width: 400px;
+}
+
+.max-w-\[450px\] {
+  max-width: 450px;
+}
+
+.max-w-\[440px\] {
+  max-width: 440px;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .cursor-pointer {
   cursor: pointer;
 }
 
-.flex-row-reverse {
-  flex-direction: row-reverse;
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .flex-col {
@@ -815,6 +769,14 @@ video {
   flex-direction: column-reverse;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
 }
@@ -823,8 +785,28 @@ video {
   justify-content: space-between;
 }
 
+.gap-14 {
+  gap: 3.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-64 {
+  gap: 16rem;
+}
+
+.gap-\[260px\] {
+  gap: 260px;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-\[20px\] {
@@ -839,13 +821,51 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
 .border {
   border-width: 1px;
+}
+
+.border-4 {
+  border-width: 4px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+
+.border-none {
+  border-style: none;
 }
 
 .border-\[\#458ff6\] {
   --tw-border-opacity: 1;
   border-color: rgb(69 143 246 / var(--tw-border-opacity));
+}
+
+.border-teal-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(20 184 166 / var(--tw-border-opacity));
+}
+
+.border-transparent {
+  border-color: transparent;
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-\[\#458ff6\] {
@@ -863,12 +883,73 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-teal-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 184 166 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
+}
+
+.bg-\[linear-gradient\(180deg\2c _\#0f1026_29\%\2c _\#1b2040_100\%\)\] {
+  background-image: linear-gradient(180deg, #0f1026 29%, #1b2040 100%);
+}
+
+.bg-\[linear-gradient\(223deg\2c _\#6888c8_0\%\2c _\#5a98f2_100\%\)\] {
+  background-image: linear-gradient(223deg, #6888c8 0%, #5a98f2 100%);
+}
+
+.bg-\[linear-gradient\(212deg\2c _\#6888c8_0\%\2c _\#5a98f2_100\%\)\] {
+  background-image: linear-gradient(212deg, #6888c8 0%, #5a98f2 100%);
+}
+
 .p-14 {
   padding: 3.5rem;
 }
 
 .p-7 {
   padding: 1.75rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .pb-12 {
@@ -895,8 +976,32 @@ video {
   padding-bottom: 2.25rem;
 }
 
-.pb-\[60px\] {
-  padding-bottom: 60px;
+.pb-\[120px\] {
+  padding-bottom: 120px;
+}
+
+.pb-\[30px\] {
+  padding-bottom: 30px;
+}
+
+.pb-\[36px\] {
+  padding-bottom: 36px;
+}
+
+.pb-\[40px\] {
+  padding-bottom: 40px;
+}
+
+.pb-\[50px\] {
+  padding-bottom: 50px;
+}
+
+.pb-\[78px\] {
+  padding-bottom: 78px;
+}
+
+.pb-\[80px\] {
+  padding-bottom: 80px;
 }
 
 .pb-\[88px\] {
@@ -911,6 +1016,10 @@ video {
   padding-top: 6rem;
 }
 
+.pt-\[100px\] {
+  padding-top: 100px;
+}
+
 .pt-\[50px\] {
   padding-top: 50px;
 }
@@ -919,68 +1028,56 @@ video {
   padding-top: 70px;
 }
 
-.pb-\[36px\] {
-  padding-bottom: 36px;
+.pt-\[90\] {
+  padding-top: 90;
 }
 
-.pt-\[100px\] {
-  padding-top: 100px;
+.pt-\[90px\] {
+  padding-top: 90px;
 }
 
-.pt-\[155px\] {
-  padding-top: 155px;
+.pb-24 {
+  padding-bottom: 6rem;
 }
 
-.pt-\[20px\] {
-  padding-top: 20px;
+.pb-14 {
+  padding-bottom: 3.5rem;
 }
 
-.pb-\[40px\] {
-  padding-bottom: 40px;
+.pb-56 {
+  padding-bottom: 14rem;
 }
 
-.pb-\[224px\] {
-  padding-bottom: 224px;
+.pt-56 {
+  padding-top: 14rem;
 }
 
-.pb-\[50px\] {
-  padding-bottom: 50px;
-}
-
-.pt-\[224px\] {
-  padding-top: 224px;
-}
-
-.pb-\[170px\] {
-  padding-bottom: 170px;
-}
-
-.pt-\[150px\] {
-  padding-top: 150px;
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pt-\[120px\] {
   padding-top: 120px;
 }
 
-.pt-\[140px\] {
-  padding-top: 140px;
+.pl-36 {
+  padding-left: 9rem;
 }
 
-.pt-\[130px\] {
-  padding-top: 130px;
-}
-
-.pb-\[100px\] {
-  padding-bottom: 100px;
-}
-
-.pb-\[80px\] {
-  padding-bottom: 80px;
+.text-left {
+  text-align: left;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 .font-body {
@@ -990,6 +1087,11 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-\[16px\] {
@@ -1018,14 +1120,14 @@ video {
   line-height: 1.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .font-bold {
@@ -1068,8 +1170,32 @@ video {
   line-height: 316%;
 }
 
+.leading-tight {
+  line-height: 1.25;
+}
+
+.leading-\[150\%\] {
+  line-height: 150%;
+}
+
+.leading-\[133\%\] {
+  line-height: 133%;
+}
+
+.leading-\[300\%\] {
+  line-height: 300%;
+}
+
+.leading-\[210\%\] {
+  line-height: 210%;
+}
+
 .tracking-\[\.02em\] {
   letter-spacing: .02em;
+}
+
+.tracking-widest {
+  letter-spacing: 0.1em;
 }
 
 .text-\[\#000\] {
@@ -1117,13 +1243,34 @@ video {
   color: rgb(167 167 167 / var(--tw-text-opacity));
 }
 
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.text-teal-500 {
+  --tw-text-opacity: 1;
+  color: rgb(20 184 166 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\#\#7d7987\] {
-  color: ##7d7987;
+.text-\[\#fff\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.placeholder-white::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-white::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-placeholder-opacity));
 }
 
 .shadow-\[rgba\(7\2c _65\2c _210\2c _0\.1\)_0px_9px_30px\] {
@@ -1138,9 +1285,20 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-\[rgba\(0\2c _0\2c _0\2c _0\.25\)_0px_4px_4px\] {
+  --tw-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px;
+  --tw-shadow-colored: 0px 4px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-blue-500\/50 {
   --tw-shadow-color: rgb(59 130 246 / 0.5);
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.hover\:border-teal-700:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(15 118 110 / var(--tw-border-opacity));
 }
 
 .hover\:bg-\[\#2b5a9c\]:hover {
@@ -1151,6 +1309,16 @@ video {
 .hover\:bg-\[\#458ff6\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(69 143 246 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-teal-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 118 110 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#fff\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:font-bold:hover {
@@ -1165,6 +1333,16 @@ video {
 .hover\:text-\[\#fff\]:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-teal-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(17 94 89 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#458ff6\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(69 143 246 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -1183,9 +1361,25 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:shadow-sm:hover {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:shadow-blue-500\/50:hover {
   --tw-shadow-color: rgb(59 130 246 / 0.5);
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.hover\:shadow-white:hover {
+  --tw-shadow-color: #fff;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 @media (min-width: 640px) {
@@ -1199,10 +1393,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:m-\[auto\] {
-    margin: auto;
-  }
-
   .md\:m-0 {
     margin: 0px;
   }
@@ -1223,32 +1413,20 @@ video {
     width: 12rem;
   }
 
-  .md\:w-\[280px\] {
-    width: 280px;
-  }
-
   .md\:w-\[218px\] {
     width: 218px;
+  }
+
+  .md\:w-\[280px\] {
+    width: 280px;
   }
 
   .md\:flex-row {
     flex-direction: row;
   }
 
-  .md\:flex-row-reverse {
-    flex-direction: row-reverse;
-  }
-
   .md\:flex-wrap {
     flex-wrap: wrap;
-  }
-
-  .md\:items-start {
-    align-items: flex-start;
-  }
-
-  .md\:items-baseline {
-    align-items: baseline;
   }
 
   .md\:justify-between {
@@ -1259,12 +1437,24 @@ video {
     gap: 3rem;
   }
 
+  .md\:gap-\[260px\] {
+    gap: 260px;
+  }
+
   .md\:pb-12 {
     padding-bottom: 3rem;
   }
 
   .md\:pb-48 {
     padding-bottom: 12rem;
+  }
+
+  .md\:pb-\[170px\] {
+    padding-bottom: 170px;
+  }
+
+  .md\:pb-\[230px\] {
+    padding-bottom: 230px;
   }
 
   .md\:pb-\[70px\] {
@@ -1283,14 +1473,6 @@ video {
     padding-top: 7rem;
   }
 
-  .md\:pt-\[168px\] {
-    padding-top: 168px;
-  }
-
-  .md\:pt-\[184px\] {
-    padding-top: 184px;
-  }
-
   .md\:pt-\[100px\] {
     padding-top: 100px;
   }
@@ -1299,30 +1481,33 @@ video {
     padding-top: 155px;
   }
 
-  .md\:pb-\[36px\] {
-    padding-bottom: 36px;
+  .md\:pt-\[168px\] {
+    padding-top: 168px;
   }
 
-  .md\:pb-\[170px\] {
-    padding-bottom: 170px;
+  .md\:pt-\[184px\] {
+    padding-top: 184px;
+  }
+
+  .md\:pt-\[220px\] {
+    padding-top: 220px;
   }
 
   .md\:pt-\[224px\] {
     padding-top: 224px;
   }
 
-  .md\:text-left {
-    text-align: left;
+  .md\:pl-0 {
+    padding-left: 0px;
+  }
+
+  .md\:pl-36 {
+    padding-left: 9rem;
   }
 
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 
   .md\:text-lg {
